--- a/elastic-yaml/es002-deployment.yaml
+++ b/elastic-yaml/es002-deployment.yaml
@@ -28,19 +28,19 @@ spec:
       containers:
         - env:
             - name: ES_JAVA_OPTS
-              value: -Xms512m -Xmx512m
+              value: -Xmx2048m  -Xms2048m
             - name: bootstrap.memory_lock
               value: "true"
             - name: cluster.initial_master_nodes
-              value: es01,es02,es03
+              value: es001,es00 2,es03
             - name: cluster.name
               value: es-docker-cluster
             - name: discovery.seed_hosts
-              value: es01,es03
+              value: es001,es03
             - name: node.name
-              value: es02
+              value: es002
           image: elasticsearch:7.10.1
-          name: es02
+          name: es002
           resources: {}
           volumeMounts:
             - mountPath: /usr/share/elasticsearch/data
